sumo/tests/traci/VariableRetrieval/TrafficLight/errors/UnknownTL/testclient.prog
simstep 48 1
getvariable 162 32 xxx
simstep 49 1
